<resources>
    <string name="app_name">Travelera</string>
    <string name="love">Made with love by Travelera team!</string>
    <string name="Welcome">Welcome Traveller</string>
    <string name="search">Search</string>
    <string name="Waterfront">Waterfront</string>
    <string name="nearby">Near-by</string>
    <string name="Parks">Parks</string>
    <string name="Religious_places">Religious places</string>
    <string name="Museums">Museums / Aquariums</string>
    <string name="Mountains">Mountains</string>
    <string name="Wildlife">Wildlife</string>
    <string name="Manmade_monuments">Man-made monuments</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_all">AllActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="rate_this">Rate This Site:</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="rate_button">RATE</string>
    <string name="thanks">Thanks!</string>
    <string name="enter_review">Enter Review...</string>
    <string name="add_review">Add a Review (Optional)</string>
    <string name="add">ADD</string>
    <string name="your_rating">Your Rating:</string>
</resources>
