<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piyushrao.travelera.SearchActivity">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SearchView
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:background="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="50dp"
        android:id="@+id/searchView2" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/Waterfront"
        android:gravity="center"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="30sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Parks" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="30sp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Religious_places" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="30sp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Museums" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="30sp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Mountains" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="30sp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Wildlife" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="30sp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40sp"
        android:gravity="center"
        android:text="@string/Manmade_monuments" />

</RelativeLayout>

</ScrollView>
