<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:background="@color/white"
    tools:context="com.example.piyushrao.travelera.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="600dp"
        android:layout_height="230dp"
        app:srcCompat="@drawable/homescreen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/Welcome"
        tools:layout_editor_absoluteY="187dp"
        tools:layout_editor_absoluteX="105dp"
        android:layout_marginBottom="22dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="54dp"
        android:layout_marginEnd="54dp"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/search"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/nearby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/nearby"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
